2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Don't generate default creation method for abstract classes,
	patch by Marc-André Lureau, fixes bug 531190

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala:
	* vala/valaparser.vala:

	Report error when using invalid modifiers for methods and fields,
	based on patch by Jared Moore, fixes bug 534018

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Ensure to not generate empty C structs,
	patch by Jared Moore, fixes bug 533977

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valaconstant.vala:
	* vala/valafield.vala:

	Fix crash when using concatenated strings as constant or field
	initializer, patch by Jared Moore, fixes bug 533723

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaaddressofexpression.vala:
	* vala/valaarraycreationexpression.vala:
	* vala/valaassignment.vala:
	* vala/valabaseaccess.vala:
	* vala/valabinaryexpression.vala:
	* vala/valabooleanliteral.vala:
	* vala/valacastexpression.vala:
	* vala/valacharacterliteral.vala:
	* vala/valacodevisitor.vala:
	* vala/valaconditionalexpression.vala:
	* vala/valadatatype.vala:
	* vala/valaelementaccess.vala:
	* vala/valaexpression.vala:
	* vala/valaintegerliteral.vala:
	* vala/valaintegertype.vala:
	* vala/valainvocationexpression.vala:
	* vala/valalambdaexpression.vala:
	* vala/valamemberaccess.vala:
	* vala/valanullchecker.vala:
	* vala/valanullliteral.vala:
	* vala/valanulltype.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valapointerindirection.vala:
	* vala/valapostfixexpression.vala:
	* vala/valarealliteral.vala:
	* vala/valareferencetransferexpression.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasignal.vala:
	* vala/valasizeofexpression.vala:
	* vala/valastringliteral.vala:
	* vala/valatypecheck.vala:
	* vala/valatypeofexpression.vala:
	* vala/valaunaryexpression.vala: