@@ -2,6 +2,12 @@
 
 	* vala/valaparser.vala:
 
+	Allow short-hand form to initialize arrays, fixes bug 515407
+
+2008-05-28  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valaparser.vala:
+
 	Don't generate default creation method for abstract classes,
 	patch by Marc-André Lureau, fixes bug 531190
 
